[gd_scene load_steps=19 format=3 uid="uid://qjejvb0ofq1q"]

[ext_resource type="Script" uid="uid://ifwgqo4gfyir" path="res://Mundo/Salas/Superficie/Sala3/sala3.gd" id="1_fmm7l"]
[ext_resource type="AudioStream" uid="uid://cq18c4m3ckr37" path="res://Recursos/Music/Evening Harmony.wav" id="2_f6pj4"]
[ext_resource type="Script" uid="uid://c3mqqbe5eddgd" path="res://Mundo/Salas/Superficie/Sala1/audio_stream_player.gd" id="3_k2xc8"]
[ext_resource type="Texture2D" uid="uid://d1bvxwfsr6uje" path="res://Recursos/Tiles/Tiles.png" id="4_qi4gb"]
[ext_resource type="Texture2D" uid="uid://bduns0b52sy07" path="res://Recursos/Tiles/Buildings.png" id="5_8nknx"]
[ext_resource type="Texture2D" uid="uid://iypwhqb3txo0" path="res://Recursos/Tiles/Props-01.png" id="6_qk6ss"]
[ext_resource type="PackedScene" uid="uid://b06ui37g2prpg" path="res://Mapeado/Suelos/Superficie/suelo1.tscn" id="9_7cu15"]
[ext_resource type="PackedScene" uid="uid://b2lvd06mk0jlt" path="res://Mapeado/Suelos/Superficie/suelo2.tscn" id="10_ojs4y"]
[ext_resource type="PackedScene" uid="uid://bug433lnnx4wv" path="res://Mapeado/Plataformas/Superficie/plataforma1.tscn" id="11_djrf1"]
[ext_resource type="PackedScene" uid="uid://cr6giuf2m3w57" path="res://Mapeado/Plataformas/Superficie/plataforma_movil_y.tscn" id="12_je3sa"]
[ext_resource type="Script" uid="uid://bfab2n303mlhb" path="res://Mundo/Salas/Superficie/Sala3/gestion_mapa_sala3.gd" id="16_fmm7l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avgbu"]
size = Vector2(2048, 896)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gkrtp"]
texture = ExtResource("4_qi4gb")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0

[sub_resource type="TileSet" id="TileSet_o1bo0"]
sources/0 = SubResource("TileSetAtlasSource_gkrtp")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_he461"]
texture = ExtResource("5_8nknx")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
22:12/0 = 0
23:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0

[sub_resource type="TileSet" id="TileSet_snyw7"]
sources/0 = SubResource("TileSetAtlasSource_he461")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3l4mw"]
texture = ExtResource("6_qk6ss")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0

[sub_resource type="TileSet" id="TileSet_h8xhc"]
sources/0 = SubResource("TileSetAtlasSource_3l4mw")

[node name="Sala3" type="Node2D"]
script = ExtResource("1_fmm7l")

[node name="AreaSala2" type="Area2D" parent="." groups=["Area_Sala"]]
position = Vector2(1472, 896)
collision_layer = 1073741825

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSala2"]
position = Vector2(-448, -576)
shape = SubResource("RectangleShape2D_avgbu")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_f6pj4")
script = ExtResource("3_k2xc8")

[node name="Decoraciones" type="Node2D" parent="."]

[node name="Arreglos" type="Node2D" parent="Decoraciones"]

[node name="Capa1" type="TileMapLayer" parent="Decoraciones/Arreglos"]
tile_set = SubResource("TileSet_o1bo0")

[node name="Capa2" type="TileMapLayer" parent="Decoraciones/Arreglos"]
tile_set = SubResource("TileSet_snyw7")

[node name="Frontal" type="Node2D" parent="Decoraciones"]

[node name="TileMapLayer" type="TileMapLayer" parent="Decoraciones/Frontal"]
tile_set = SubResource("TileSet_h8xhc")

[node name="Techos" type="Node2D" parent="."]
position = Vector2(488, 1104)

[node name="Paredes" type="Node2D" parent="."]
position = Vector2(488, 1104)

[node name="Suelos" type="Node2D" parent="."]
position = Vector2(488, 1104)

[node name="Suelo1" parent="Suelos" instance=ExtResource("9_7cu15")]
position = Vector2(-232, -464)

[node name="Suelo2" parent="Suelos" instance=ExtResource("10_ojs4y")]
position = Vector2(280, -464)

[node name="Suelo3" parent="Suelos" instance=ExtResource("9_7cu15")]
position = Vector2(792, -464)

[node name="Suelo4" parent="Suelos" instance=ExtResource("10_ojs4y")]
position = Vector2(1304, -464)

[node name="Suelo4" parent="Suelos/Suelo4" instance=ExtResource("10_ojs4y")]
position = Vector2(512, 0)

[node name="Suelo4" parent="Suelos/Suelo4/Suelo4" instance=ExtResource("10_ojs4y")]
position = Vector2(512, 0)

[node name="Suelo4" parent="Suelos/Suelo4/Suelo4/Suelo4" instance=ExtResource("10_ojs4y")]
position = Vector2(-3072, 0)

[node name="Suelo4" parent="Suelos/Suelo4/Suelo4/Suelo4/Suelo4" instance=ExtResource("10_ojs4y")]
position = Vector2(-512, 0)

[node name="Plataformas" type="Node2D" parent="."]
position = Vector2(480, 1343.8)

[node name="Node2D" type="Node2D" parent="Plataformas"]
position = Vector2(-384, -304)
rotation = -1.5708

[node name="Node2D2" type="Node2D" parent="Plataformas"]
position = Vector2(-144, -672)
rotation = -1.5708

[node name="Node2D3" type="Node2D" parent="Plataformas"]
position = Vector2(240, -672)
rotation = -1.5708

[node name="Node2D4" type="Node2D" parent="Plataformas"]
position = Vector2(624, -672)
rotation = -1.5708

[node name="Trampas" type="Node2D" parent="."]

[node name="Recogibles" type="Node2D" parent="."]

[node name="Enemigos" type="Node2D" parent="."]

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(360, 200)
rotation = -1.5708

[node name="Terreno11" parent="Node2D2" instance=ExtResource("11_djrf1")]
position = Vector2(-112, 632)
rotation = 1.5708

[node name="Terreno14" parent="Node2D2" instance=ExtResource("11_djrf1")]
position = Vector2(-176, 504)
rotation = 1.5708

[node name="Terreno14" parent="Node2D2/Terreno14" instance=ExtResource("11_djrf1")]
position = Vector2(-128, 72)

[node name="Node2D3" type="Node2D" parent="."]
position = Vector2(744, 200)
rotation = -1.5708

[node name="Terreno11" parent="Node2D3" instance=ExtResource("11_djrf1")]
position = Vector2(-112, 440)
rotation = 1.5708

[node name="Terreno11" parent="Node2D3/Terreno11" instance=ExtResource("11_djrf1")]
position = Vector2(224, -48)

[node name="Terreno13" parent="Node2D3" instance=ExtResource("11_djrf1")]
position = Vector2(-112, 312)
rotation = 1.5708

[node name="Terreno15" parent="Node2D3" instance=ExtResource("11_djrf1")]
position = Vector2(-112, 376)
rotation = 1.5708

[node name="Node2D4" type="Node2D" parent="."]
position = Vector2(1128, 200)
rotation = -1.5708

[node name="Terreno11" parent="Node2D4" instance=ExtResource("11_djrf1")]
position = Vector2(16, 504)
rotation = 1.5708

[node name="Terreno14" parent="Node2D4" instance=ExtResource("11_djrf1")]
position = Vector2(16, 440)
rotation = 1.5708

[node name="PlataformaMovil3" parent="." instance=ExtResource("12_je3sa")]
position = Vector2(1792, 464)

[node name="GestionMapaSala3" type="Node2D" parent="."]
position = Vector2(1512, 1175.8)
script = ExtResource("16_fmm7l")

[node name="InicioSuperiorSala" type="Marker2D" parent="GestionMapaSala3"]
position = Vector2(-1512, -1176)

[node name="InicioInferiorSala" type="Marker2D" parent="GestionMapaSala3"]
position = Vector2(-1512, 104)

[node name="FinSuperiorSala" type="Marker2D" parent="GestionMapaSala3"]
position = Vector2(528, -1176)

[node name="FinInferiorSala" type="Marker2D" parent="GestionMapaSala3"]
position = Vector2(528, 104)

[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_finished"]
